[gd_scene load_steps=25 format=3 uid="uid://bsr3c46mxy2fw"]

[ext_resource type="Script" path="res://fps/campfire.gd" id="1_11afe"]
[ext_resource type="PackedScene" uid="uid://bmewr3e0dn71h" path="res://assets/survival-kit-1.1/Models/GLTF format/campfire.glb" id="2_eww0k"]
[ext_resource type="Script" path="res://addons/inventory-system/interact/interact_action.gd" id="3_6pv27"]
[ext_resource type="Resource" uid="uid://bnofwpkgx0twi" path="res://base/craft_stations/campfire.tres" id="4_bov00"]
[ext_resource type="Script" path="res://addons/inventory-system/craft/craft_station.gd" id="4_ishni"]
[ext_resource type="Resource" uid="uid://x5huasdaljjl" path="res://base/database.tres" id="5_72vu1"]
[ext_resource type="Script" path="res://addons/inventory-system/core/inventory.gd" id="6_1ngfx"]
[ext_resource type="Resource" uid="uid://041ut5vu78mt" path="res://base/categories/burnables.tres" id="8_81xo0"]
[ext_resource type="Script" path="res://addons/inventory-system/core/categorized_slot.gd" id="9_4hyoe"]
[ext_resource type="Resource" uid="uid://vf4th6k6nu1k" path="res://base/categories/food.tres" id="10_3i6mn"]
[ext_resource type="AudioStream" uid="uid://c7erllg58q3h3" path="res://assets/audios/campfire_crackle_2.wav" id="11_dck0x"]

[sub_resource type="Resource" id="Resource_tjd2g"]
script = ExtResource("3_6pv27")
input = "toggle_fire"
description = "Toggle Fire"
code = 1

[sub_resource type="Resource" id="Resource_kkhqy"]
script = ExtResource("3_6pv27")
input = "interact"
description = "Open Campfire"
code = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_v5tyu"]
size = Vector3(1.20602, 1.16811, 1.2693)

[sub_resource type="Resource" id="Resource_pueei"]
script = ExtResource("9_4hyoe")
accepted_categories = Array[Resource("res://addons/inventory-system/core/item_category.gd")]([ExtResource("8_81xo0")])
amount = 0
max_stack = 8

[sub_resource type="Resource" id="Resource_qil68"]
script = ExtResource("9_4hyoe")
accepted_categories = Array[Resource("res://addons/inventory-system/core/item_category.gd")]([ExtResource("10_3i6mn")])
amount = 0
max_stack = 1

[sub_resource type="Resource" id="Resource_ahb6e"]
script = ExtResource("9_4hyoe")
accepted_categories = Array[Resource("res://addons/inventory-system/core/item_category.gd")]([ExtResource("10_3i6mn")])
amount = 0
max_stack = 1

[sub_resource type="Resource" id="Resource_8f0qi"]
script = ExtResource("9_4hyoe")
accepted_categories = Array[Resource("res://addons/inventory-system/core/item_category.gd")]([ExtResource("10_3i6mn")])
amount = 0
max_stack = 1

[sub_resource type="Curve" id="Curve_gbe35"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dbr8k"]
curve = SubResource("Curve_gbe35")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uboi2"]
direction = Vector3(0, 1, 0)
spread = 30.38
flatness = 0.22
initial_velocity_min = 1.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_dbr8k")
color = Color(1, 1, 0.117647, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4jrli"]
shading_mode = 0
albedo_color = Color(1, 1, 0.0705882, 1)

[sub_resource type="BoxMesh" id="BoxMesh_a22dj"]
material = SubResource("StandardMaterial3D_4jrli")
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="Skin" id="Skin_2ffj2"]

[node name="Campfire" type="StaticBody3D"]
transform = Transform3D(0.999612, 0, -0.0278519, 0, 1, 0, 0.0278519, 0, 0.999612, -1.74824, -2.38419e-07, -4.02722)
collision_layer = 18
collision_mask = 3
script = ExtResource("1_11afe")
burnable_category = ExtResource("8_81xo0")
toggle_fire_action = SubResource("Resource_tjd2g")
actions = Array[ExtResource("3_6pv27")]([SubResource("Resource_kkhqy")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.249215, 0)
shape = SubResource("BoxShape3D_v5tyu")

[node name="campfire" parent="." instance=ExtResource("2_eww0k")]
transform = Transform3D(5, 0, 4.76837e-07, 0, 5, 0, -4.76837e-07, 0, 5, 0, 0, 0)

[node name="CraftStation" type="Node" parent="." node_paths=PackedStringArray("input_inventories", "output_inventories")]
script = ExtResource("4_ishni")
input_inventories = [NodePath("../InputInventory")]
output_inventories = [NodePath("../InputInventory")]
limit_number_crafts = 1
type = ExtResource("4_bov00")
only_remove_ingredients_after_craft = true
auto_craft = true
database = ExtResource("5_72vu1")

[node name="InputInventory" type="Node" parent="."]
script = ExtResource("6_1ngfx")
slots = Array[Resource("res://addons/inventory-system/core/slot.gd")]([SubResource("Resource_pueei"), SubResource("Resource_qil68"), SubResource("Resource_ahb6e"), SubResource("Resource_8f0qi")])
slot_amount = 4
inventory_name = "Campfire"
recreate_slots_on_ready = false
database = ExtResource("5_72vu1")

[node name="Node" type="Node3D" parent="."]

[node name="GPUParticles3D" type="GPUParticles3D" parent="Node"]
amount = 32
process_material = SubResource("ParticleProcessMaterial_uboi2")
draw_pass_1 = SubResource("BoxMesh_a22dj")
draw_skin = SubResource("Skin_2ffj2")

[node name="OmniLight3D" type="OmniLight3D" parent="Node"]
light_color = Color(1, 1, 0.0901961, 1)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Node"]
stream = ExtResource("11_dck0x")

[connection signal="item_added" from="InputInventory" to="." method="_on_input_inventory_item_added"]
